updates zone buckets
